# SDL2-game-2d-shoot-em-up-

./: CMakeLists.txt  README.md
src/: draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  structs.h
